# MMVAE_mmnist

./: .travis.yml  README.md  pyproject.toml  setup.cfg  tox.ini
tests/: test_basics.py
