[metadata]
name = MMVAE_mmnist
version = 0.0.1-dev
description = Codebase for training multi modal VAEs on the MNIST-SVHN-TEXT dataset.
url = https://github.com/Jimmy2027/MMVAE_mmnist
keywords =
    MMVAE
    data analysis
    deep learning

provides = mmvae_mmnist

license = GNUv3
license_file = LICENSE

[options]
python_requires = >=3.7
install_requires =
    torch

packages = find:


[options.extras_require]
test =
    pytest~=6.1

